@@ -1,4 +1,4 @@
-package com.croman.singlevendorecommerce.general;
+package com.croman.singlevendorecommerce.utils;
 
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
@@ -6,10 +6,12 @@ import org.springframework.data.domain.Sort;
 
 public class PaginationUtils {
 	
+	private PaginationUtils () {}
+	
 	private static final int MAX_PAGINATION_SIZE = 100;
 
 	public static int safeSize(int size) {
-		return Math.min(Math.max(size, 1), MAX_PAGINATION_SIZE);
+	    return Math.clamp(size, 1, MAX_PAGINATION_SIZE);
 	}
 	
 	public static int safePage(int page) {
